--- a/src/UI/components/styles/searchbar.css
+++ b/src/UI/components/styles/searchbar.css
@@ -3,3 +3,68 @@
     justify-content: space-evenly;
     align-items: center;
 }
+  .buttons-container{
+    display: flex;
+align-items: center;  
+justify-content: space-evenly;
+}
+  .logo-container {
+    margin-bottom: 20px;
+  }
+  
+  .logo-button {
+    padding: 0;
+  }
+  
+  .logo-img {
+    width: 100px; /* Уменьшение размера логотипа */
+  }
+  
+  .buttons-space {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  
+  .nav-button {
+    margin: 5px;
+  }
+  
+  .action-button {
+    margin: 5px;
+  }
+  
+  /* Медиазапросы */
+  @media (max-width: 768px) {
+    .logo-img {
+      width: 80px; /* Уменьшение размера логотипа на мобильных устройствах */
+    }
+  
+    .nav-button {
+      font-size: 0.8em; /* Уменьшение размера текста кнопок навигации */
+    }
+  
+    .action-button {
+      font-size: 0.8em; /* Уменьшение размера текста кнопок действий */
+    }
+    .posiciya{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        margin-bottom: 50%;
+    }
+    .buttons-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+      }
+      .buttons{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+      }
+  }
+  
